Update nav links and fix sidebar overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   background-color: var(--background-offwhite);
   color: var(--text-dark);
+  overflow-x: hidden;
 }
 
 html,
@@ -219,7 +220,7 @@ button {
   padding: 6rem 1rem;
   opacity: 0;
   transform: translateX(100%);
-  transition: transform 0.5s, opacity 1s;
+  transition: transform 0.5s, opacity 1s, display 1s;
   z-index: 2;
 }
 
@@ -253,6 +254,7 @@ button {
 }
 
 .active-sidebar {
+  display: block;
   opacity: 1;
   transform: translateX(0px);
 }
